--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.3",
+    "nodemailer": "^8.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
